--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "test": "mocha -r ts-node/register tests/**",
         "lint": "eslint src/**",
         "prepublish": "tsc",
+        "mk-docs": "typedoc --name \"Service Core Documentation\" && touch ./docs/.nojekyll",
         "publish": "npm publish"
     },
     "devDependencies": {
@@ -26,6 +27,7 @@
         "mocha": "^8.2.1",
         "prettier": "^2.1.2",
         "ts-node": "^9.0.0",
+        "typedoc": "^0.19.2",
         "typescript": "^4.0.5"
     },
     "files": [
