--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "author": "Max Koon <maxk@nix2.io>",
     "license": "CC-BY-1.0",
     "private": false,
+    "prettier": "@nix2/prettier-config",
     "scripts": {
         "format": "prettier --write ./src/**",
         "test-format": "prettier --check ./src/**",
@@ -17,6 +18,7 @@
         "mk-docs": "typedoc --name \"Typescript Plugin Documentation\" && touch ./docs/.nojekyll"
     },
     "devDependencies": {
+        "@nix2/prettier-config": "^1.0.2",
         "@types/mocha": "^8.0.3",
         "@types/node": "^14.14.7",
         "@typescript-eslint/eslint-plugin": "^4.7.0",
